# relaleap-FabricPC

./: LICENSE  README.md  pyproject.toml
baselines/: phase0_fabricpc_comparison.json
configs/: char_extended_focal_hep_temporal_clipped_objective_gate.yaml  char_extended_hep_support_stress_clipped.yaml  char_extended_hep_support_stress_entropy_clipped.yaml  char_extended_hep_support_stress_guided_clipped.yaml  char_extended_hep_support_stress_temporal_clipped.yaml  char_extended_hep_temporal_clipped_objective_gate.yaml  char_extended_temporal_consistency_hep_temporal_clipped_objective_gate.yaml  char_extended_temporal_consistency_w005_hep_temporal_clipped_objective_gate.yaml  char_extended_temporal_consistency_w010_hep_temporal_clipped_objective_gate.yaml  char_extended_temporal_consistency_w020_hep_temporal_clipped_objective_gate.yaml  char_larger_capacity_hep_temporal_clipped_objective_gate.yaml  char_larger_focal_hep_temporal_clipped_objective_gate.yaml  char_larger_hep_support_stress_clipped.yaml  char_larger_hep_support_stress_entropy_clipped.yaml  char_larger_hep_support_stress_guided_clipped.yaml  char_larger_hep_support_stress_temporal_clipped.yaml  char_larger_hep_temporal_clipped_objective_gate.yaml  char_larger_hep_temporal_clipped_objective_gate_seed2.yaml  char_larger_hep_temporal_clipped_objective_gate_seed3.yaml  char_larger_support_wide_contextual_router_hep_temporal_clipped_objective_gate.yaml  char_larger_support_wide_contextual_router_hep_temporal_clipped_objective_gate_seed2.yaml  char_larger_support_wide_hep_temporal_clipped_objective_gate.yaml  (+68 more)
(+62 files in other folders)
