[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "relaleap-fabricpc"
version = "0.1.0"
description = "RelaLeap Phase 0 experiments ported to JAX and FabricPC."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "RelaLeap FabricPC Authors"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Private :: Do Not Upload",
]
dependencies = [
    "fabricpc",
    "jax",
    "jaxlib",
    "numpy>=1.24.0",
    "optax>=0.1.7",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["relaleap_fabricpc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
